# mini-C-compiler

./: .gitignore  Cargo.toml  README.md  exec.sh
assembler/: README.md  assembler.py  instruction.py  writer.py
simulator/: Makefile  README.md  cpu.cpp  cpu.hpp  datamem.hpp  entry.hpp  instmem.hpp  instruction.cpp  instruction.hpp  main.cpp  print.cpp  print.hpp  register.hpp
src/: alive.rs  asm.rs  ast.rs  c.lalrpop  knormal.rs  main.rs  reg_alloc.rs  typing.rs  util.rs  virtuals.rs
src/ast/: alpha.rs  mod.rs  to_knormal.rs  typing.rs
src/knormal/: alive.rs  mod.rs  reg_alloc.rs
src/test/: fib.c  fib.s  io.s  test.c
test/: ack.c  ack.s  fib.c  fib.s  io.s  many_arguments.c  test.c  test.s
